--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
     "clsx": "^1.2.1",
+    "embla-carousel-react": "^8.0.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
+    "lucide-react": "^0.376.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
     "react-typist": "^2.0.5",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
+    "swiper": "^11.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
   },
